sass/styles.sass
*
    box-sizing: border-box

$main: #222
$secondary: #2a2a2a
$white: #fff
$highlight: pink
$black: #000
$darkish: #111

html,body
    margin: 0
    height: 100%

ul
    list-style: none
    padding-left: 0
    margin: 0

img
    width: 100%
    max-width: 100%
    min-height: 100% 

.banner
    background: $main
    h1
        color: $white
        text-transform: uppercase
        padding: 2em 0
        margin: 0
        font-size: 5em
        line-height: .85em

.wrapper
    width: 1140px
    max-width: 90%
    margin: 0 auto

nav
    background: $secondary
    a,label
        text-transform: uppercase
        color: $white
        font-size: 1.25em
        font-weight: 700
    a
        text-decoration: none
        margin-right: 2em
        &:hover
            color: $highlight
    label
        border-right: 2px solid $black
        padding-right: 1em
    input[type="search"]
        outline: none
        border: none
        font-size: 1.25em
        font-weight: 400
        background: transparent
        color: $white
        font-style: italic
        padding: 1em
    
.resources
    padding-top: 1px
    display: flex
    flex-wrap: wrap

.resource
    display: block
    width: 25%
    position: relative
    height: 200px
    overflow: hidden
    border: 2px solid $white
    &__info
        position: absolute
        background: transparentize($highlight, .3)
        padding: 2em
        top: 0
        bottom: 0
        width: 100%
        transform: translateX(-100%)
        transition: transform .3s ease-in-out
        &.js-show-info
            transform: translateX(0)
        h2
            font-size: 1.5em
            font-weight: 700
            color: $white
            line-height: 1
            text-transform: uppercase
        .btn
            border: 2px solid $white
            padding: .5em 1em
            color: $white
            text-decoration: none
            border-radius: .3em
            background-color: transparentize($darkish, .7)
        p
            display: inline-block
            margin-left: 1em
            font-weight: 800

@media only screen and (max-width: 1240px)
    .resources
        li
            width: 33.33%

@media only screen and (max-width: 900px)
    .resources
        li
            width: 50%

    .banner
        h1
            padding: 1.5em 0
            font-size: 3.5em

    nav
        background: $secondary
        a,label
            font-size: 1.1em
        a
            margin-right: 1em
        label
            padding-right: .5em
        input[type="search"]
            font-size: 1.1em
            padding: .5em

@media only screen and (max-width: 600px)
    .resources
        li
            width: 100%
    .banner
        h1
            font-size: 2.5em
    nav
        a
            display: none

